--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,5 +1,10 @@
 ---
+import {ClientRouter} from "astro:transitions";
 
+import '../styles/global.css';
+import Navigation from '../components/Navigation.astro';
+
+const pageTitle = "Stuck In Jupiter";
 ---
 
 <html lang="en">
@@ -8,9 +13,18 @@
 		<link rel="icon" type="image/svg+xml" href="/favicon.svg" />
 		<meta name="viewport" content="width=device-width" />
 		<meta name="generator" content={Astro.generator} />
-		<title>Astro</title>
+
+		<ClientRouter />
+
+		<link rel="preconnect" href="https://fonts.googleapis.com">
+		<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+		<link href="https://fonts.googleapis.com/css2?family=Jersey+10&display=swap" rel="stylesheet">
+
+		<title>{pageTitle}</title>
 	</head>
 	<body>
-		<h1>My Astro Site</h1>
+		<Navigation />
+
+		<h1>You've reached <span class="emphasise">Stuck In Jupiter</span></h1>
 	</body>
 </html>
