--- a/src/pages/about.astro
+++ b/src/pages/about.astro
@@ -40,11 +40,11 @@ const languages = ["JavScript", "Python", "Java", "C#"];
 
         <p>
             Hey there! My name is {identity.nickname}, or if that is too strange or charming (<i>ha ha</i>) you can call me {identity.realname}.
-            <br>If you want to here someone complain about AI or the horrid state of the world then you've come to the right place. 
+            <br>If you want to hear someone complain about AI or the horrid state of the world then you've come to the right place. 
         </p>
 
         <p><b>Want to reach me?</b></p>
-        <p>Contact me via my discord <i>@quarkinanarchy</i>, make sure you message me saying you came from here or I will probably ignore you!</p>
+        <p>Contact me via my email <i>stuckinjupiter@proton.me</i> and make sure to say you came from here so I know not to ignore you!</p>
 
         <p class="scotland">Love from {identity.country}!</p>
 
