--- a/src/components/Navigation.astro
+++ b/src/components/Navigation.astro
@@ -1,5 +1,5 @@
 <div class="navbar">
     <a href="/">Home</a><span>/</span>
-    <a href="/about/">About</a><span>/</span>
+    <a href="/about/">About Me</a><span>/</span>
     <a href="/blog/">Blog</a>
 </div>
